[package]
name = "arm"
edition = "2024"
version = "0.1.0"

[dependencies]
chrono = { version = "^0.4", default-features = false }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-embedded-hal = "0.3.0"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = "0.1.0"
embassy-net = { version = "0.6.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6", "dns"] }
embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32h7s3l8", "time-driver-tim2", "exti", "memory-x", "unstable-pac", "chrono"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embedded-hal = "0.2.6"
embedded-hal-async = "1.0"
embedded-io-async = "0.6.1"
embedded-nal-async = "0.8.0"
embedded-storage = "0.3.1"
grounded = "0.2.0"
heapless = { version = "0.8", default-features = false }
micromath = "2.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand_core = "0.6.3"
static_cell = "2"
stm32-fmc = "0.3.0"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
